# Mail2TelegramForward

./: .gitignore  README.md  mail-forwarder.service  mailToTelegramForwarder.conf  mailToTelegramForwarder.py  pyproject.toml  requirements.txt
.github/workflows/: code_quality.yml  codecov-report.yml
